unpackaged/main/default/objects/pse__Region__c/fields/BU_Code__c.field-meta.xml
<CustomField>
    <fullName>BU_Code__c</fullName>
    <description>Used in Integration with ERP.</description>
    <label>BU Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>