unpackaged/main/default/objects/pse__Region__c/fields/Cascading_Multiplier_Rates__c.field-meta.xml
<CustomField>
    <fullName>Cascading_Multiplier_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting this to True will push all the Multiplier rates to the Immediate Sub Regions and below. If you would like different rates on different sub-regions, do not mark this field as true.</description>
    <inlineHelpText>Setting this to True will push all the Multiplier rates to the Immediate Sub Regions and below. If you would like different rates on different sub-regions, do not mark this field as true.</inlineHelpText>
    <label>Cascading Multiplier Rates</label>
    <type>Checkbox</type>
</CustomField>