unpackaged/main/default/objects/pse__Region__c/fields/CPS_Product_Family_Mapping_ID__c.field-meta.xml
<CustomField>
    <fullName>CPS_Product_Family_Mapping_ID__c</fullName>
    <description>Holds a mapping ID value to use when Region is mapped based on 'Product Family' within the Opportunity Object. Typically this will match the original name of the region. However can be defined by the System Administrator.</description>
    <label>Product Family Mapping ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>