unpackaged/main/default/objects/pse__Region__c/fields/Default_PT_Work_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Default_PT_Work_Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by Integration.</description>
    <label>Default PT Work Calendar</label>
    <referenceTo>pse__Work_Calendar__c</referenceTo>
    <relationshipLabel>Regions (Default PT Work Calendar)</relationshipLabel>
    <relationshipName>Regions</relationshipName>
    <type>Lookup</type>
</CustomField>