unpackaged/main/default/objects/pse__Region__c/fields/Saturday_Rate__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Rate__c</fullName>
    <label>Saturday Rate Multiplier</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>