unpackaged/main/default/objects/pse__Region__c/fields/Standby_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Standby_Multiplier__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Multiplier of the billable amount for "Standby" Timecards</description>
    <inlineHelpText>Multiplier of the billable amount for "Standby" Timecards</inlineHelpText>
    <label>Standby Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>