unpackaged/main/default/objects/pse__Region__c/fields/Sunday_Pubic_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Pubic_Holiday__c</fullName>
    <label>Sunday &amp; Public Holiday Rate Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>