unpackaged/main/default/objects/pse__Region__c/fields/Travel_KM_Miles__c.field-meta.xml
<CustomField>
    <fullName>Travel_KM_Miles__c</fullName>
    <description>Multiplier rate used to define the amount per Mile or KM travelled by a resource</description>
    <label>Travel - KM/Miles Rate Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>