unpackaged/main/default/objects/pse__Region__c/fields/Travel_Rate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Travel_Rate_Multiplier__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Field to store Travel Rate multiplier used by each business unit.</description>
    <inlineHelpText>Field to store Travel Rate multiplier used by each business unit.</inlineHelpText>
    <label>Travel Rate Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>