unpackaged/main/default/objects/pse__Region__c/fields/Weekend_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Multiplier__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Multiplier Value for the Billable amount of Weekend type Timecards</description>
    <inlineHelpText>Multiplier Value for the Billable amount of Weekend type Timecards</inlineHelpText>
    <label>Weekend Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>