unpackaged/main/default/objects/pse__Region__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Region_Head__c</columns>
    <columns>pse__Parent_Region__c</columns>
    <columns>pse__Headquarters_Region__c</columns>
    <columns>BU_Code__c</columns>
    <columns>pse__Bookings__c</columns>
    <columns>pse__Billings__c</columns>
    <columns>pse__Total_Costs__c</columns>
    <columns>pse__Default_Work_Calendar__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>